sumo/tests/traci/Scenario/InvalidFlag/output.traci
***Starting server on port 8847 ***
